# flowforge

./: .env.example  .gitignore  docker-compose.yml  litellm.config.yaml  pyproject.toml
agent-profiles/: classifier.md  (+2 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/flowforge/: config.py  main.py
backend/flowforge/agents/: profile_loader.py  prompt_builder.py
backend/flowforge/api/: agents.py  deps.py  dev.py  executions.py  models.py  templates.py  tenants.py  tools.py  webhooks.py  workflows.py  ws.py
backend/flowforge/compiler/: __init__.py  constants.py  graph_builder.py  node_factory.py  parser.py  safe_eval.py  schema.json  validator.py
backend/flowforge/db/: session.py
backend/flowforge/llm/: client.py
backend/flowforge/models/: __init__.py
backend/flowforge/templates/: engine.py
backend/flowforge/tool_gateway/: api.py  auth.py  main.py  schemas.py
backend/flowforge/tools/: discovery.py  executor.py  gateway_client.py  http_client.py  mcp_client.py
backend/flowforge/worker/: __main__.py  consumer.py  executor.py  graph_cache.py  lock.py  session_manager.py
backend/tests/: test_models.py  test_task7_examples.py
backend/tests/agents/: test_profile_loader.py  test_prompt_builder.py
backend/tests/api/: conftest.py  test_agents.py  test_deps.py  test_executions.py  test_models.py  test_tenants.py  test_tools.py  test_workflows.py
backend/tests/compiler/: test_graph_builder.py  test_node_factory.py  test_parser.py  test_safe_eval.py  test_validator.py
backend/tests/config/: test_settings.py
backend/tests/llm/: test_client.py
(+122 files in other folders)
