[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowforge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "litellm>=1.40",
    "mcp>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "jinja2>=3.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "anyio>=4.4",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: requires live Docker Compose stack"]

[tool.ruff]
line-length = 100
target-version = "py312"
